--- a/Proyecto 3/nbproject/private/private.properties
+++ b/Proyecto 3/nbproject/private/private.properties
@@ -11,4 +11,4 @@ javafx.run.as=standalone
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=
 jlink.strip=false
-user.properties.file=/home/nxlsxn/.netbeans/11.0/build.properties
+user.properties.file=/Users/Usuario/Library/Application Support/NetBeans/8.2/build.properties
